<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountPreferencesFragment"
    android:background="@color/cambridge_blue">




    <ImageView
        android:id="@+id/profile_Picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="73dp"
        android:layout_marginLeft="15dp"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/usernameHolder"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="130dp"
        android:hint="Username"
        android:textColor="@color/mint_cream"/>

    <EditText
        android:id="@+id/firstname"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="130dp"
        android:hint="First"
        android:textColor="@color/mint_cream"/>

    <EditText
        android:id="@+id/lastname"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="130dp"
        android:hint="First"
        android:textColor="@color/mint_cream"/>


    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="265dp"
        android:layout_height="33dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="180dp"
        android:inputType="textPassword"
        android:textSize="25dp"
        android:hint="Your Password"
        android:textColor="@color/mint_cream"/>

    <ImageButton
        android:id="@+id/hideunhide"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="185dp"
        android:layout_marginLeft="365dp"
        android:src="@android:drawable/ic_menu_view" />

    <EditText
        android:id="@+id/bio"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="15dp"
        android:hint="Bio: "
        android:textColor="@color/mint_cream"/>


    <Button
        android:id="@+id/updatePrefs"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:cornerRadius="5dp"
        android:text="Update Preferences"
        android:textColor="@color/cool_grey"
        android:backgroundTint="@color/mint_cream"/>

    <Button
        android:id="@+id/logOut"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        app:cornerRadius="5dp"
        android:text="Logout"
        android:textColor="@color/cool_grey"
        android:backgroundTint="@color/mint_cream"/>
    <Button
        android:id="@+id/seeReports"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="-30dp"
        app:cornerRadius="5dp"
        android:text="See Reports"
        android:textColor="@color/cool_grey"
        android:backgroundTint="@color/mint_cream"/>

    <Button
        android:id="@+id/delAccount"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/mint_cream"
        android:text="Delete Account"
        android:textColor="@color/cool_grey"
        app:cornerRadius="5dp" />

    <ImageButton
        android:id="@+id/changePicture"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="100dp"
        android:src="@android:drawable/ic_menu_camera"
        />

    <ImageButton
        android:id="@+id/editInfo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="365dp"
        android:layout_marginTop="15dp"
        android:src="@android:drawable/ic_menu_edit" />


</FrameLayout>