<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginScreen"
    android:background="@color/Indian_red">



    <EditText
        android:id="@+id/UsernameInput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="275dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Username"
        android:textColor="@color/mint_cream"
        />

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:hint="Password"
        android:textColor="@color/mint_cream"/>

    <EditText
        android:id="@+id/reenterPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-75dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:hint="Retype password"
        android:textColor="@color/mint_cream"/>

    <Button
        android:id="@+id/Register"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        app:cornerRadius="5dp"
        android:text="Register"
        android:textColor="@color/Ebony"
        android:backgroundTint="@color/mint_cream"/>

    <Button
        android:id="@+id/Login"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"
        android:text="Login"
        app:cornerRadius="5dp"
        android:textColor="@color/Ebony"
        android:backgroundTint="@color/mint_cream"
        />

    <TextView
        android:id="@+id/AccountRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account Registration"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textSize="10pt"
        android:textColor="@color/mint_cream"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="125dp"
        android:layout_marginRight="150dp"
        android:textColor="@color/mint_cream"
        android:hint="First Name"
        />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="150dp"
        android:textColor="@color/mint_cream"
        android:hint="Last Name"
         />

<!--    <Button-->
<!--        android:id="@+id/backButton"-->
<!--        android:layout_width="25dp"-->
<!--        android:layout_height="25dp"-->
<!--        android:text="Back"-->
<!--        app:layout_anchor="@+id/button" />-->


</androidx.coordinatorlayout.widget.CoordinatorLayout>